# hydro_system

./: .gitignore  CMakeLists.txt  keys.txt.secret  keys.yaml.secret  package.xml
.gitsecret/keys/: pubring.kbx  pubring.kbx~  trustdb.gpg
.gitsecret/paths/: mapping.cfg
flask/: app.py
flask/static/: main2.css
flask/templates/: time.html
launch/: dosing_pump_test.launch  motor_sensor_test.launch  pH_controller.launch  pH_filter_test.launch
msg/: MotorHatCmd.msg  PhMsg.msg  StampedFloatWithVariance.msg  TempMsg.msg
nodes/: DS18B20_node.py  MPL3115A2_node.py  SHT31D_node.py  filter_node.py  logger_node.py  median_filter.py  motor_hat_node.py  motor_hat_tester.py  pH_controller_node.py  pH_sensor_node.py  timelapse_node.py
plotly/: app.py
srv/: ChangeSetPoint.srv
utils/: log_cleanup.py
